2018-01-02 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Improved error handling in IAM command

2017-05-26 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Added Namstr command

2017-05-18 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Added Service Now Change Request and Standard Change Request commands
  * Fixed a possible use of a nil User object in chat_bot_command.rb

2017-02-24 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Added telephone field to LDAP command

2017-02-13 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Renamed ServiceNow command to ServiceNowTickets command
  * Added ServiceNowKb command

2017-01-31 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Added ServiceNow command
  * Renamed from 'DSS ChatBot' to 'Aggie Bot'

2016-06-02 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Added 'title' field to LDAP command

2016-02-17 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Added home department code (ucdAppointmentDepartmentCode) to LDAP response
  * Catch ruby-sysaid exceptions and display error message in chat

2015-12-09 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Implemented GitHub support via project_tag/issue_number, e.g. dw/232

2015-11-02 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Implemented feature on/off switches to allow UCD AggieBot and DSS AutoBot
    to share a codebase.

2015-10-13 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Ignore messages sent by self
  * Fix for using two types of SysAid ticket number identification

2015-09-24 Christopher Thielen <cmthielen@ucdavis.edu>:
  * LDAP queries with multiple words but no known commands now
    perform a CN=*term1*term2* -style search

2015-09-18 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Added 'Good morning' responses
  * Added 'roles <loginid>' command to query Roles Management

2015-09-08 Christopher Thielen <cmthielen@ucdavis.edu>:
  * Added LDAP attribute-specific search. Idea credit: Bill Broadley
