@@ -25,4 +25,3 @@ end
 every :day, at:'9:00am' do
   rake 'autobot:remind'
 end
-
