@@ -1,3 +1,6 @@
+2018-04-04 Christopher Thielen <cmthielen@ucdavis.edu>:
+  * Support replying in threads if message was received from a thread
+
 2018-01-02 Christopher Thielen <cmthielen@ucdavis.edu>:
   * Improved error handling in IAM command
 
